# singletask

./: LICENSE  README.md  app_state.json  pyproject.toml  tasks.db
.github/workflows/: auto-tag.yml
singletask/: __main__.py
