[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "singletask"
version = "1.1.3"
description = "A compact, single-task-focused application"
authors = [
  { name = "Torbjørn Opheim", email = "torbjornop@gmail.com" }
]
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
  "Operating System :: POSIX :: Linux"
]
readme = "README.md"
dependencies = ["tk"]  # or "tkinter" depending on your distro
urls = { "Home" = "https://topheim.com" }

# `scripts`/`entry-points` in PEP 621:
[project.scripts]
singletask = "singletask.__main__:main"
